--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "unittest",
     "browser"
   ],
-  "version": "1.6.0-zenefits",
+  "version": "1.6.0-zenefits.2",
   "author": "Toby Ho <airportyh@gmail.com>",
   "repository": {
     "type": "git",
